XMLExper/m12/m12_559_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLPrinter::VisitEnter(const tinyxml2::XMLElement&, const tinyxml2::XMLAttribute*)’:
tinyxml2.cpp:2988:80: error: cannot dynamic_cast ‘parentElem’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 2988 |     const bool compactMode = /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(parentElem) ? CompactMode( *parentElem ) : _compactMode;
      |                                                                                ^
diff: tinyxml2.S: No such file or directory
